# mlb-mcp-server

./: .gitignore  README.md  pyproject.toml
data/: stats.csv
src/mlb_mcp_server/: constants.py  models.py  server.py
src/mlb_mcp_server/data/: bref.csv
tests/: conftest.py  test_server.py
tests/fixtures/: batting_stats_fixture.json  pitching_stats_fixture.json  standings_fixture.json  team_batting_stats_fixture.json  team_pitching_stats_fixture.json
