[project]
name = "mlb-mcp-server"
version = "0.1.0"
description = "MCP server supporting MLB stats"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
disallow_untyped_defs = true
exclude = [
    "tests/*"
]

[tool.ruff.lint]
extend-select = ["I"]
